--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="top"
-        android:background="#006B5D"
+        android:background="#D44010"
         android:gravity="center_vertical"
         android:shadowColor="@android:color/black"
         android:shadowDx="7"
