--- a/app/src/main/res/layout/resultwin.xml
+++ b/app/src/main/res/layout/resultwin.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <FrameLayout
@@ -216,7 +216,8 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowview2"
@@ -224,7 +225,8 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowview3"
@@ -232,7 +234,8 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
@@ -244,7 +247,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="#D83E0E"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -253,7 +256,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="#D83E0E"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -262,7 +265,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
+                android:textColor="#D83E0E"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </TableRow>
@@ -367,7 +370,7 @@
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="1.2"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#D83E0E"
         android:textSize="14sp"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="16dp"
@@ -383,7 +386,7 @@
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="1.2"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#D83E0E"
         android:textSize="14sp"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="16dp"
