--- a/app/src/main/res/layout/resultwin.xml
+++ b/app/src/main/res/layout/resultwin.xml
@@ -204,7 +204,8 @@
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" >
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="-5dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -272,7 +273,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/rowview7"
