--- a/app/src/main/res/layout/top_layout.xml
+++ b/app/src/main/res/layout/top_layout.xml
@@ -10,18 +10,15 @@
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="4dp"
         android:background="#C54949"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_vertical"
-        android:shadowColor="@android:color/background_dark"
-        android:shadowDx="3"
-        android:shadowDy="3"
-        android:shadowRadius="1.2"
         android:text=""
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <FrameLayout
