--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/adView"
+        android:layout_marginRight ="10dp"
         android:layout_marginBottom="100dp"
         android:onClick="launchFullFragmentActivity"
         ads:layout_constraintBottom_toBottomOf="parent"
