--- a/app/src/main/res/layout/tab1_lot_list.xml
+++ b/app/src/main/res/layout/tab1_lot_list.xml
@@ -1,33 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:paddingLeft="15dp"
-	android:paddingRight="15dp"
 	android:descendantFocusability="beforeDescendants">
-
-	<TextView
-		android:id="@+id/dot2"
-		android:layout_width="wrap_content"
-		android:layout_height="@dimen/dot_height"
-		android:layout_marginTop="@dimen/dimen_10"
-		android:layout_marginRight="@dimen/dot_margin_right"
-		android:includeFontPadding="false"
-		android:lineSpacingExtra="0dp"
-		android:textColor="@color/timestamp"
-		android:textSize="@dimen/dot_text_size" />
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:background="#224A6B"
 		android:descendantFocusability="afterDescendants"
 		android:orientation="vertical"
-		android:paddingBottom="15dp"
-		android:paddingLeft="15dp"
-		android:paddingRight="15dp"
-		android:paddingTop="15dp"
+		android:paddingTop="2dp"
+		android:paddingBottom="2dp"
 		tools:ignore="UselessParent">
 
 
@@ -35,159 +20,45 @@
 			android:id="@+id/line1"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:textColor="@android:color/black"
-			android:textSize="16sp"
+			android:textAlignment="center"
+			android:textColor="#EF6C00"
+			android:textSize="18sp"
 			android:textStyle="bold" />
 
-		<FrameLayout
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:layout_gravity="center_horizontal">
+		<View
+			android:id="@+id/divider4"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:layout_marginLeft="20dp"
+			android:layout_marginRight="20dp"
+			android:background="@color/msg_no_notes" />
 
-			<LinearLayout
-				android:id="@+id/Rball"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:orientation="horizontal">
+		<TextView
+			android:id="@+id/line2"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:textAlignment="center"
+			android:textColor="@android:color/white"
+			android:textSize="24sp"
+			android:textStyle="bold" />
 
-				<ImageView
-					android:id="@+id/RBall1"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
+		<View
+			android:id="@+id/divider"
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:background="#FF8F00" />
 
-				<ImageView
-					android:id="@+id/RBall2"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
+		<!--<TextView-->
+		<!--android:id="@+id/textView"-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:layout_weight="1"-->
+		<!--android:background="@android:color/holo_orange_light"-->
+		<!--android:gravity="center_vertical|center_horizontal"-->
+		<!--android:text="[삭          제]"-->
+		<!--android:textSize="10sp"-->
+		<!--android:textStyle="bold" />-->
 
-				<ImageView
-					android:id="@+id/RBall3"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
-
-				<ImageView
-					android:id="@+id/RBall4"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
-
-				<ImageView
-					android:id="@+id/RBall5"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
-
-				<ImageView
-					android:id="@+id/RBall6"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1" />
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:id="@+id/Rtext"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:orientation="horizontal"
-				tools:ignore="DuplicateIds">
-
-				<TextView
-					android:id="@+id/Rtext1"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/Rtext2"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/Rtext3"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/Rtext4"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/Rtext5"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/Rtext6"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:layout_weight="1"
-					android:gravity="center|center_horizontal|center_vertical"
-					android:shadowColor="@android:color/black"
-					android:shadowDx="10"
-					android:shadowDy="10"
-					android:shadowRadius="10"
-					android:textAlignment="center"
-					android:textColor="@android:color/white"
-					android:textSize="20sp"
-					android:textStyle="bold" />
-
-			</LinearLayout>
-
-		</FrameLayout>
 
 	</LinearLayout>
 
