--- a/app/src/main/res/layout/top_layout.xml
+++ b/app/src/main/res/layout/top_layout.xml
@@ -17,7 +17,7 @@
         android:gravity="center_vertical"
         android:text=""
         android:textAlignment="viewStart"
-        android:textColor="@color/white"
+        android:textColor="@android:color/black"
         android:textSize="10sp"
         android:textStyle="bold" />
 
@@ -228,7 +228,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Switch
