--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -36,26 +36,142 @@
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/timestamp"
                 android:textStyle="bold|italic" />
+
+            <TextView
+                android:id="@+id/MAgroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1.2"
+                android:text=""
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/Rtext"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/note"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="9.5"
-                android:gravity="center_vertical"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
+                android:id="@+id/Rtext1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/darker_gray"
+                android:shadowDx="4"
+                android:shadowDy="4"
+                android:shadowRadius="1.4"
                 android:textAlignment="center"
-                android:textColor="#E34211"
-                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/darker_gray"
+                android:shadowDx="4"
+                android:shadowDy="4"
+                android:shadowRadius="1.4"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/darker_gray"
+                android:shadowDx="4"
+                android:shadowDy="4"
+                android:shadowRadius="1.4"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext4"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/darker_gray"
+                android:shadowDx="4"
+                android:shadowDy="4"
+                android:shadowRadius="1.4"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext5"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/darker_gray"
+                android:shadowDx="4"
+                android:shadowDy="4"
+                android:shadowRadius="1.4"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext6"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="1.2"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Rtext7"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="1.2"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
