--- a/app/src/main/res/layout/tab1_lot_list.xml
+++ b/app/src/main/res/layout/tab1_lot_list.xml
@@ -33,14 +33,127 @@
 			android:layout_marginRight="20dp"
 			android:background="@color/msg_no_notes" />
 
-		<TextView
-			android:id="@+id/line2"
-			android:layout_width="match_parent"
+		<LinearLayout
+			android:id="@+id/Rtext"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textAlignment="center"
-			android:textColor="@android:color/white"
-			android:textSize="24sp"
-			android:textStyle="bold" />
+			android:layout_gravity="center_horizontal"
+			android:layout_marginTop="4dp"
+			android:layout_marginBottom="4dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/Rtext1"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/darker_gray"
+				android:shadowDx="4"
+				android:shadowDy="4"
+				android:shadowRadius="1.4"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext2"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/darker_gray"
+				android:shadowDx="4"
+				android:shadowDy="4"
+				android:shadowRadius="1.4"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext3"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/darker_gray"
+				android:shadowDx="4"
+				android:shadowDy="4"
+				android:shadowRadius="1.4"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext4"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/darker_gray"
+				android:shadowDx="4"
+				android:shadowDy="4"
+				android:shadowRadius="1.4"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext5"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/darker_gray"
+				android:shadowDx="4"
+				android:shadowDy="4"
+				android:shadowRadius="1.4"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext6"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginRight="4dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/white"
+				android:shadowDx="2"
+				android:shadowDy="2"
+				android:shadowRadius="1.2"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/Rtext7"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:shadowColor="@android:color/white"
+				android:shadowDx="2"
+				android:shadowDy="2"
+				android:shadowRadius="1.2"
+				android:textAlignment="center"
+				android:textColor="@android:color/black"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+		</LinearLayout>
 
 		<View
 			android:id="@+id/divider"
