--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -50,7 +50,7 @@
                 android:shadowRadius="1.2"
                 android:text=""
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="#C62828"
                 android:textSize="14sp" />
         </LinearLayout>
 
