--- a/app/src/main/res/layout/tab1_lot_list.xml
+++ b/app/src/main/res/layout/tab1_lot_list.xml
@@ -49,12 +49,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/darker_gray"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="4"
 				android:shadowDy="4"
 				android:shadowRadius="1.4"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -65,12 +65,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/darker_gray"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="4"
 				android:shadowDy="4"
 				android:shadowRadius="1.4"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -81,12 +81,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/darker_gray"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="4"
 				android:shadowDy="4"
 				android:shadowRadius="1.4"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -97,12 +97,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/darker_gray"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="4"
 				android:shadowDy="4"
 				android:shadowRadius="1.4"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -113,12 +113,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/darker_gray"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="4"
 				android:shadowDy="4"
 				android:shadowRadius="1.4"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -129,12 +129,12 @@
 				android:layout_marginRight="4dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/white"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="2"
 				android:shadowDy="2"
 				android:shadowRadius="1.2"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
@@ -144,12 +144,12 @@
 				android:layout_height="40dp"
 				android:layout_weight="1"
 				android:gravity="center"
-				android:shadowColor="@android:color/white"
+				android:shadowColor="@android:color/black"
 				android:shadowDx="2"
 				android:shadowDy="2"
 				android:shadowRadius="1.2"
 				android:textAlignment="center"
-				android:textColor="@android:color/black"
+				android:textColor="@android:color/white"
 				android:textSize="20sp"
 				android:textStyle="bold" />
 
