--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -54,7 +54,7 @@
                 android:shadowDx="3"
                 android:shadowDy="3"
                 android:shadowRadius="1.3"
-                android:text="选择(点击)"
+                android:text="明确"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
