First China Lotgen select manual number

--- a/app/src/main/res/layout/resultwin.xml
+++ b/app/src/main/res/layout/resultwin.xml
@@ -29,6 +29,7 @@
             android:id="@+id/Rtext1"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="center"
             android:shadowColor="@android:color/black"
@@ -44,6 +45,7 @@
             android:id="@+id/Rtext2"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="center"
             android:shadowColor="@android:color/black"
@@ -59,6 +61,7 @@
             android:id="@+id/Rtext3"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="center"
             android:shadowColor="@android:color/black"
@@ -74,6 +77,7 @@
             android:id="@+id/Rtext4"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="center"
             android:shadowColor="@android:color/black"
@@ -89,6 +93,7 @@
             android:id="@+id/Rtext5"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="center"
             android:shadowColor="@android:color/black"
