--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -32,6 +32,8 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
                 android:layout_weight="2"
                 android:background="@drawable/ripple_copy"
                 android:shadowColor="@android:color/black"
@@ -48,6 +50,7 @@
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginRight="2dp"
                 android:layout_weight="8"
                 android:background="@drawable/ripple_save"
                 android:shadowColor="@android:color/black"
