--- a/app/src/main/res/layout/top_layout.xml
+++ b/app/src/main/res/layout/top_layout.xml
@@ -21,195 +21,127 @@
         android:textSize="10sp"
         android:textStyle="bold" />
 
-    <FrameLayout
+    <LinearLayout
+        android:id="@+id/textbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        tools:ignore="DuplicateIds">
 
-        <LinearLayout
-            android:id="@+id/ballbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/balltext1"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage1"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext2"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage2"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext3"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage3"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                ads:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext4"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage4"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext5"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage5"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext6"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage6"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball3" />
+        <TextView
+            android:id="@+id/balltext7"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="7dp"
+            android:layout_weight="1"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ballimage7"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="7dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ball2" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/textbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal"
-            tools:ignore="DuplicateIds">
-
-            <TextView
-                android:id="@+id/balltext1"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext2"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext3"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext4"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext5"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext6"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/balltext7"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="7dp"
-                android:layout_weight="1"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="1.5"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </FrameLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text10"
@@ -229,6 +161,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/black"
         android:orientation="horizontal">
 
         <Switch
